@@ -2,6 +2,7 @@
 
 - list_windows now returns a list, not print to selected filehandle
 - use PDL::Graphics::Simple for plotting
+- add plotting-object arg to plot{,_freq}
 
 0.101     2024-09-11 20:13:59 BST
 
